--- a/_site.yml
+++ b/_site.yml
@@ -7,3 +7,11 @@ navbar:
       href: Adina.html
     - text: "Alexis"
       href: alexis.html  
+      
+      
+output:
+  html_document:
+    theme: cerulean 
+    highlight: textmate
+    toc: true 
+    toc_float: true
